--- a/pages/profile.html
+++ b/pages/profile.html
@@ -37,7 +37,53 @@
         </div>
     </header>
 
-    <h1>Mi perfil</h1>
+    <div class="elementos">
+        <div class="container mt-5">
+            <!-- Encabezado del perfil -->
+            <div class="profile-header text-center mb-4">
+                <img src="https://via.placeholder.com/150" alt="Foto de perfil">
+                <h2 class="mt-3">Nombre del Usuario</h2>
+                <p class="text-muted">Desarrollador web | Entusiasta de la tecnología</p>
+                <div class="social-icons">
+                    <a href="#" class="text-primary"><i class="bi bi-facebook"></i></a>
+                    <a href="#" class="text-info"><i class="bi bi-twitter"></i></a>
+                    <a href="#" class="text-danger"><i class="bi bi-youtube"></i></a>
+                    <a href="#" class="text-dark"><i class="bi bi-linkedin"></i></a>
+                </div>
+            </div>
+        
+            <!-- Información personal -->
+            <div class="row">
+                <!-- Columna izquierda: Información básica -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Información Básica</h5>
+                            <ul class="list-group">
+                                <li class="list-group-item"><strong>Email:</strong> usuario@ejemplo.com</li>
+                                <li class="list-group-item"><strong>Ubicación:</strong> Ciudad, País</li>
+                                <li class="list-group-item"><strong>Teléfono:</strong> (123) 456-7890</li>
+                                <li class="list-group-item"><strong>Fecha de Nacimiento:</strong> 01/01/1990</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+        
+                <!-- Columna derecha: Acerca de mí y opciones -->
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Acerca de mí</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget erat ac ligula facilisis tempor. Fusce fringilla tempor magna, et volutpat nisi condimentum in.</p>
+                            <h5 class="mt-4">Opciones</h5>
+                            <button class="btn btn-success">Editar Perfil</button>
+                            <button class="btn btn-warning">Cambiar Foto</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>   
+    </div>
 
     <footer>
         <div class="socialIcons">
@@ -61,5 +107,10 @@
             </ul>
         </div>
     </footer>
+    <!--  el JS de Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <!-- Icons  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </body>
 </html>
